--- a/index.html
+++ b/index.html
@@ -9,6 +9,92 @@
     <link rel="stylesheet" href="src/style/style.css">
 </head>
 <body>
-    <div ></div>
+    <div class="page">
+        <h1>
+            CSS Weather Forecast
+            <img src="src/images/iconSunSea.svg" alt="sunriseicon">
+        </h1>
+        <ul>
+            <li class="box lisboa">
+                <p>Lisbon</p>
+                <div>
+                    <span>21°C</span>
+                    <img src="src/images/fullSun.svg" alt="sunIcon">
+                </div>
+            </li>
+            <li class="box paris">
+                <p>Paris</p>
+                <div>
+                    <span>11°C</span>
+                    <img src="src/images/rainIcon.svg" alt="rainIcon">
+                </div>
+            </li>
+            <li class="box belgrade">
+                <p>Belgrade</p>
+                <div>
+                    <span>15°C</span>
+                    <img src="src/images/halfSun.svg" alt="halfSunIcon">
+                </div>
+            </li>
+            <li class="box venice">
+                <p>Venice</p>
+                <div>
+                    <span>21°C </span>
+                    <img src="src/images/icon-5.svg" alt="cloud">
+                </div>
+            </li>
+            <li class="box telavive">
+                <p>Tel-Avive</p>
+                <div>
+                    <span>32°C</span>
+                    <img src="src/images/icon-6.svg" alt="sunny">
+                </div>
+            </li>
+            <li class="box cair">
+                <p>Cair</p>
+                <div>
+                    <span>21°C</span>
+                    <img src="src/images/fullSun.svg" alt="sunIcon">
+                </div>
+            </li>
+            <li class="box newyork">
+                <p>New-York</p>
+                <div>
+                    <span>17°C</span>
+                    <img src="src/images/icon-7.svg" alt="cloud">
+                </div>
+            </li>
+            <li class="box newdelhi">
+                <p>New-Delhi</p>
+                <div>
+                    <span>17°C</span>
+                    <img src="src/images/rainIcon.svg" alt="rain">
+                </div>
+            </li>
+            <li class="box sanfrancisco">
+                <p>San-Francisco</p>
+                <div>
+                    <span>15°C</span>
+                    <img src="src/images/halfSun.svg" alt="cloud">
+                </div>
+            </li>
+            <li class="box tokyo">
+                <p>Tokyo</p>
+                <div>
+                    <span>8°C</span>
+                    <img src="src/images/halfSun.svg" alt="cloud">
+                </div>
+            </li>
+            <li class="box sydney">
+                <p>Sydney</p>
+                <div>
+                    <span>25°C</span>
+                    <img src="src/images/fullSun.svg" alt="sun">
+                </div>
+            </li>
+        </ul>
+        <p class="footer">Have a nice day and don't forget umbrella if you are in New Delhi now!</p>
+    </div>
+    
 </body>
 </html>
